--- a/src/Snakefile
+++ b/src/Snakefile
@@ -7,7 +7,7 @@ from snakemake.utils import min_version
 container: "docker://snakemake/snakemake:v6.8.0"
 min_version("6.0")
 
-config = yaml.load(open("config.yml", "r"), Loader=yaml.FullLoader)
+config = yaml.load(open("config.yaml", "r"), Loader=yaml.FullLoader)
 features = yaml.load(open("../../features.yaml", "r"), Loader=yaml.FullLoader)
 
 snakefiles = "../../src/snakefiles/"
